# cg25-city-lights

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CompilerConfig.cmake
resources/: credits.txt
resources/audio/: credits.txt
resources/scenes/: CityTest.blend  CityTest.glb  CityTest.gltf  CityTestHi.glb  ComplexTest.glb  DefaultCube.glb  LightTest.glb  city_scene.glb  demo_city_scene.glb
resources/shaders/: basic.frag  basic.vert  blob.comp  blob.frag  blob.vert  blob_lookup.glsl  blob_noise.glsl  bloom_down.comp  bloom_up.comp  depth_prepass.vert  descriptors.glsl  finalize.comp  fog.comp  fog_common.glsl  fog_filter.comp  frustum_cull.comp  light_froxel_assign.comp  light_tile_assign.comp  pbr.frag  pbr.vert  pbr_common.glsl  shadow.vert  skybox.frag  skybox.vert  ssao.comp  ssao_filter.comp  tile_assign.comp  triangle.frag  triangle.vert
resources/shaders/colormap/: LICENSE
resources/shaders/common/: descriptors_geom.glsl  descriptors_light.glsl  descriptors_mat.glsl  math.glsl
resources/shaders/pbr/: bsdf.glsl  diffuse.glsl  fresnel.glsl  lighting.glsl  normal.glsl  shadow.glsl  specular.glsl
resources/skybox/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
resources/skybox/NightSkyHDRI002_2K_HDR/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
resources/skybox/evening_road_01_puresky_2k/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
src/: CMakeLists.txt
src/cmake/: soloud.cmake
src/main/: Application.cpp  Application.h  RenderSystem.cpp  RenderSystem.h  SceneAnimation.h  main.cpp
src/main/animation/: InstanceAnimationSampler.cpp  InstanceAnimationSampler.h  Timeline.h  VariableAnimationController.h
src/main/audio/: Audio.cpp  Audio.h  AudioSystem.cpp  AudioSystem.h
src/main/backend/: Buffer.cpp  Buffer.h  BufferResource.cpp  BufferResource.h  Descriptors.cpp  Descriptors.h  DeviceQueue.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageResource.cpp  ImageResource.h  Pipeline.cpp  Pipeline.h  ShaderCompiler.cpp  ShaderCompiler.h  StagingBuffer.cpp  StagingBuffer.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h
src/main/blob/: HenonHeiles.cpp  HenonHeiles.h  Model.cpp  Model.h  System.cpp  System.h  VertexData.h
src/main/blob/mc/: MCMesher.cpp  MCMesher.h  VertexData.h
src/main/blob/meshing/: Mesher.cpp  Mesher.h
src/main/blob/model/: BlobModel.cpp  BlobModel.h  Model.cpp  Model.h  Model2.cpp  Model2.h  VertexData.h
src/main/blob/sdf/: BlobSdf.cpp  BlobSdf.h  Sdf.cpp  Sdf.h
src/main/debug/: Annotation.cpp  Annotation.h  Performance.cpp  Performance.h  Settings.cpp  Settings.h  SettingsGui.cpp  SettingsGui.h
src/main/entity/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Light.h  ShadowCaster.cpp  ShadowCaster.h
src/main/glfw/: Context.cpp  Context.h  Input.cpp  Input.h  Window.cpp  Window.h
src/main/image/: ImageCpuLoader.cpp  ImageCpuLoader.h  ImageGpuUploader.cpp  ImageGpuUploader.h  ImageTypes.cpp  ImageTypes.h  LoadTask.h
src/main/imgui/: ImGui.cpp  ImGui.h
src/main/renderer/: BlobRenderer.cpp  BlobRenderer.h  BlobRenderer2.cpp  BlobRenderer2.h  BloomRenderer.cpp  BloomRenderer.h  DepthPrePassRenderer.cpp  DepthPrePassRenderer.h  FinalizeRenderer.cpp  FinalizeRenderer.h  FogLightRenderer.cpp  FogLightRenderer.h  FogRenderer.cpp  FogRenderer.h  FrustumCuller.cpp  FrustumCuller.h  LightRenderer.cpp  LightRenderer.h  PbrSceneRenderer.cpp  PbrSceneRenderer.h  SSAORenderer.cpp  SSAORenderer.h  ShadowRenderer.cpp  ShadowRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h
src/main/scene/: AnimationSampler.cpp  AnimationSampler.h  EnvironmentLighting.h  Gltf.cpp  Gltf.h  GltfLoader.cpp  GltfLoader.h  Light.h  Loader.cpp  Loader.h  Scene.cpp  Scene.h  gltf_types.h  gpu_types.h
src/main/sdf/: MCMesher.cpp  MCMesher.h
src/main/util/: Clock.h  Color.h  Logger.cpp  Logger.h  PerFrame.h  globals.h  math.h  static_vector.h
